force-app/main/default/objects/Service_Address__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Service Addresses</relationshipLabel>
    <relationshipName>Service_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>