force-app/main/default/objects/Service_Address__c/fields/Service_Address_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Location_Address__c</fullName>
    <description>Field designed to pull address data off of the related Location record and format it as a complete address for output to Conga documents where applicable (i.e. 633 14A Defendant Service List)</description>
    <formula>Location__r.Address__c &amp; &quot; &quot; &amp;
Location__r.Address_2__c &amp; &quot; &quot; &amp;
Location__r.Address_3__c &amp; &quot; &quot; &amp; 
Location__r.City__c &amp; &quot;, &quot; &amp; TEXT( Location__r.State__c ) &amp; &quot; &quot; &amp; Location__r.Zip_Code__c</formula>
    <label>Service Address - Location Address</label>
    <type>Text</type>
</CustomField>