force-app/main/default/objects/Service_Address__c/validationRules/Location_must_equal_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_must_equal_Account</fullName>
    <active>true</active>
    <errorConditionFormula>Location__r.Entity__c &lt;&gt;  Case_Role__r.Entity__c</errorConditionFormula>
    <errorMessage>The Account on both Location and Case Role must be the same</errorMessage>
</ValidationRule>